<resources>
    <string name="app_name">CatApp3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed_the_cat">Feed the Cat!</string>
    <string name="feed">FEED</string>
    <string name="insert_calories_fed">Insert calories fed</string>
    <string name="create_cat_profile">Create cat profile</string>
    <string name="cat_s_name">Name</string>
    <string name="cat_s_sex">Sex</string>
    <string name="cat_s_breed">Breed</string>
    <string name="cat_s_date_of_birth">YYYY/MM/DD</string>
    <string name="cat_s_weight">Weight</string>
    <string name="profile_picture">Profile picture</string>
    <string name="textview">TextView</string>
    <string name="create">Create</string>
    <string name="create_user">Create user</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="pick_cat_profile_picture">Pick cat profile picture</string>
    <string name="add_cat_picture">Add cat picture</string>

    <string-array name="sex_arrays">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>