<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CatCreationActivity">

    <TextView
        android:id="@+id/catProfInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_cat_profile"
        app:layout_constraintBottom_toTopOf="@+id/catNameBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/catNameBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cat_s_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/catSexBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catProfInfo" />

    <EditText
        android:id="@+id/catSexBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cat_s_sex"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/catBreedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catNameBox" />

    <EditText
        android:id="@+id/catBreedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cat_s_breed"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/dateOfBirthBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catSexBox" />

    <EditText
        android:id="@+id/dateOfBirthBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cat_s_date_of_birth"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/weightBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catBreedBox" />

    <EditText
        android:id="@+id/weightBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cat_s_weight"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/addPhotoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateOfBirthBox" />

    <Button
        android:id="@+id/addPhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pictureFileBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightBox" />

    <TextView
        android:id="@+id/pictureFileBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addPhotoButton"
        app:layout_constraintTop_toBottomOf="@+id/weightBox" />

    <Button
        android:id="@+id/createCatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pictureFileBox"
        app:layout_constraintTop_toBottomOf="@+id/addPhotoButton" />

</androidx.constraintlayout.widget.ConstraintLayout>